appId: app.phraseman
---
- takeScreenshot: "icon-audit-loaded-home"
- tapOn:
    point: "31%,95%"
- waitForAnimationToEnd:
    timeout: 8000
- takeScreenshot: "icon-audit-loaded-lessons"
- tapOn:
    point: "50%,95%"
- waitForAnimationToEnd:
    timeout: 8000
- takeScreenshot: "icon-audit-loaded-arena"
- tapOn:
    point: "69%,95%"
- waitForAnimationToEnd:
    timeout: 8000
- takeScreenshot: "icon-audit-loaded-friends"
- tapOn:
    point: "88%,95%"
- waitForAnimationToEnd:
    timeout: 8000
- takeScreenshot: "icon-audit-loaded-settings"
